nullaway_error_50f096a1-31e5-4c08-92cc-46fbd55aebec.txt
Stopping file watching and invalidating VFS after an error happened
/home/nima/Developer/nullness-benchmarks/eureka/eureka-core/src/main/java/com/netflix/eureka/cluster/ReplicationTaskProcessor.java:197: error: [NullAway] dereferenced expression e.getMessage() is @Nullable
            	String message = e.getMessage().toLowerCase();
            	                               ^
